--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "antd": "^4.15.4",
+    "history": "^5.0.0",
     "lodash": "^4.17.21",
+    "msw": "^0.28.2",
     "node-sass": "^5.0.0",
     "prop-types": "^15.7.2",
     "query-string": "^7.0.0",
@@ -18,6 +20,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "redux": "^4.1.0",
+    "redux-mock-store": "^1.5.4",
     "redux-thunk": "^2.3.0",
     "web-vitals": "^1.0.1"
   },
